--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -61,9 +61,6 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="Tag.cpp">
-      <Filter>ソース ファイル\GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
@@ -108,7 +105,7 @@
     <ClInclude Include="Player.h">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Tag.h">
+    <ClInclude Include="ObjectTag.h">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
