iguchiのコンポーネント2

--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClInclude Include="Projector.h">
       <Filter>oriented</Filter>
     </ClInclude>
+    <ClInclude Include="ColliderManager.h">
+      <Filter>oriented</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="System">
