--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -197,6 +197,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ColliderManager.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="Component.h" />
