カウントダウン処理

--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -191,6 +191,7 @@
     <ClCompile Include="RapidJson.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="TimeCount.cpp" />
+    <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="Tomato.cpp" />
     <ClCompile Include="TomatoWall.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
+    <ClInclude Include="TimeUIController.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Tomato.h" />
     <ClInclude Include="TomatoWall.h" />
