スコアできました

--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="Projector.cpp" />
     <ClCompile Include="RapidJson.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleScene.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="RapidJson.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
