--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="TimeUIController.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="Score.cpp">
+      <Filter>oriented</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -178,6 +181,9 @@
     </ClInclude>
     <ClInclude Include="TimeUIController.h">
       <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>oriented</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
