残段数UIほぼ完成 残段数の値が取得できればOK

--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="Tomato.cpp" />
+    <ClCompile Include="TomatoUIContoroller.cpp" />
     <ClCompile Include="TomatoWall.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -234,6 +235,7 @@
     <ClInclude Include="TimeUIController.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Tomato.h" />
+    <ClInclude Include="TomatoUIContoroller.h" />
     <ClInclude Include="TomatoWall.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
