--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="TomatoUIContoroller.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="ScoreUIController.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -189,6 +192,9 @@
       <Filter>oriented</Filter>
     </ClInclude>
     <ClInclude Include="TomatoUIContoroller.h">
+      <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="ScoreUIController.h">
       <Filter>GameObject</Filter>
     </ClInclude>
   </ItemGroup>
