--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -189,8 +189,10 @@
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Projector.cpp" />
     <ClCompile Include="RapidJson.cpp" />
+    <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Score.cpp" />
+    <ClCompile Include="StaticHuman.cpp" />
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleScene.cpp" />
@@ -227,9 +229,11 @@
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Projector.h" />
     <ClInclude Include="RapidJson.h" />
+    <ClInclude Include="ResultScene.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="Score.h" />
+    <ClInclude Include="StaticHuman.h" />
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
